[package]
name = "MoneroRequest-Rust"
version = "0.1.0"
edition = "2021"
description = "MoneroRequest-Rust is an easy way to decode/encode monero-request codes in Rust."
license = "Unlicense"
repository = "https://github.com/NotGovernor/MoneroRequest-Rust"
authors = ["NotGovernor"]
keywords = ["Monero", "MoneroRequest"]
categories = ["encoding", "parsing", "cryptography::cryptocurrencies"]
readme = "README.md"



[dependencies]
thiserror = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

flate2 = "1.0.28"

base64 = "0.22.0"

rand = "0.8.5"

